--- a/style.css
+++ b/style.css
@@ -83,6 +83,15 @@ body {
   padding: 0px;
 }
 
+.main-startGame {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  margin: 0px;
+  padding: 0px;
+}
+
 .text-name {
   text-align: center;
   margin-top: 40px;
@@ -124,7 +133,7 @@ body {
   height:50px;
 	line-height:50px;
   width: 127px;
-	text-decoration:none;
+	text-decoration:none !important;
 	text-align:center;
 	text-shadow:0px 1px 0px #ffee66;
   margin: 0px 15px;
@@ -142,9 +151,10 @@ body {
 	top:1px;
 }
 
-.submit-name {
+.submit-name, .start-game, .reset-game {
   width: 127px;
   height: 30px;
   line-height: 30px;
   font-size: 20px;
+  text-decoration: none !important;
 }
